--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "resume-react",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/App.js",
   "scripts": {
-    "dev": "parcel index.html"
+    "dev": "parcel ./src/index.html"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
-    "parcel": "^2.8.2"
+    "parcel": "^2.8.2",
+    "process": "^0.11.10"
   }
 }
