--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
-    "parcel": "^2.8.2",
-    "process": "^0.11.10"
+    "parcel": "^2.8.2"
   }
 }
