--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "resume-react",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/App.js",
+  "main": "./src/index.js",
   "scripts": {
     "dev": "parcel ./src/index.html"
   },
